Test_files/invalidTestCases/fail_mul.avm
push int32(5)
mul
exit